@@ -174,6 +174,14 @@
     default=no
 [/advanced_preference]
 
+[advanced_preference]
+    field=color_cursors
+    name= _ "Show color cursors"
+    description= _ "Use colored mouse cursors, which may be slower or break the game (use at your own risk)"
+    type=boolean
+    default=yes
+[/advanced_preference]
+
 #ifdef __UNUSED__
 [advanced_preference]
     field=joystick_support_enabled
